# workshop-scrapy

./: README.md  pyproject.toml
collect/collect/: settings.py
data/: data.jsonl  quotes.db
src/collect/: settings.py
src/collect/spiders/: mercadolivre.py
src/transform/: main.py
